--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
-    "module": "esnext",
     "esModuleInterop": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -18,10 +19,9 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true,
-    "baseUrl": ".", // Add this line
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"] // Define the '@' alias
+      "@/*": ["./*"]
     }
   },
   "include": [
@@ -32,4 +32,3 @@
   ],
   "exclude": ["node_modules"]
 }
-
